<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profilectivity">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageview_profile"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
        app:strokeColor="@color/grey"
        app:srcCompat="@drawable/me"
        app:strokeWidth="1dp" />


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageview_profile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text=""
        android:textColor="#B0000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student"
        android:textColor="#B0000000"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        />

    <ImageView
        android:id="@+id/imageview_pic"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/desc"
        android:layout_marginTop="-30dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/try4"
        android:contentDescription="@string/todo" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/Email_card"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@id/imageview_pic"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="15dp"
        android:clickable="true"
        app:cardCornerRadius="8sp"
        app:cardElevation="6dp"
        app:strokeColor="@color/grey"
        app:strokeWidth="1dp"
        android:focusable="true">

        <LinearLayout
            android:id="@+id/linerlayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_baseline_markunread_24"
                android:contentDescription="TODO" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/email_head"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/email"
                    android:textColor="#B0000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/email_head"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="3dp"
                    android:text="@string/okoyotommy_gmail_com"
                    android:textColor="#B0000000"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_baseline_keyboard_arrow_right" />
            </RelativeLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/password_card"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@id/Email_card"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="15dp"
        android:clickable="true"
        app:cardCornerRadius="8sp"
        app:cardElevation="6dp"
        app:strokeColor="@color/grey"
        app:strokeWidth="1dp">

        <LinearLayout
            android:id="@+id/linerlayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_baseline_lock_24"
                android:layout_marginStart="15dp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/pass_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:text="@string/change_password"
                    android:textColor="#B0000000"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginStart="20dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_baseline_keyboard_arrow_right" />
            </RelativeLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/signout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@id/password_card"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="15dp"
        android:clickable="true"
        app:cardCornerRadius="8sp"
        app:cardElevation="6dp"
        app:strokeColor="@color/grey"
        app:strokeWidth="1dp"
        android:focusable="true">

        <LinearLayout
            android:id="@+id/linerlayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_baseline_logout"
                android:contentDescription="TODO"
                android:layout_marginStart="15dp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/sign_out"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:text="@string/logout"
                    android:textColor="#B0000000"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginStart="20dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_baseline_keyboard_arrow_right"
                    android:contentDescription="TODO" />
            </RelativeLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>









</RelativeLayout>